--- a/ProjectExpenseControl/Views/AccountingAccounts2/Create.cshtml
+++ b/ProjectExpenseControl/Views/AccountingAccounts2/Create.cshtml
@@ -12,7 +12,6 @@
     @Html.AntiForgeryToken()
     
     <div class="form-horizontal">
-        <h4>Cuenta Contable</h4>
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         <div class="form-group">
@@ -33,7 +32,7 @@
 
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Crear" class="btn btn-default" />
+                <input type="submit" value="CREAR" class="btn btn-default" />
             </div>
         </div>
     </div>
@@ -43,3 +42,6 @@
     @Html.ActionLink("Regresar a la Lista", "Index")
 </div>
 
+@section Scripts {
+    @Scripts.Render("~/bundles/jqueryval")
+}
