--- a/ProjectExpenseControl/Views/AccountingAccounts2/Delete.cshtml
+++ b/ProjectExpenseControl/Views/AccountingAccounts2/Delete.cshtml
@@ -4,11 +4,11 @@
     ViewBag.Title = "Delete";
 }
 
-<h2>Eliminar Cuenta Contable</h2>
+<h2>Delete</h2>
 
-<h3>¿Está seguro de eliminar cuenta contable?</h3>
+<h3>Are you sure you want to delete this?</h3>
 <div>
-    <h4>Cuenta Contable</h4>
+    <h4>AccountingAccount</h4>
     <hr />
     <dl class="dl-horizontal">
         <dt>
@@ -25,8 +25,8 @@
         @Html.AntiForgeryToken()
 
         <div class="form-actions no-color">
-            <input type="submit" value="Eliminar" class="btn btn-default" /> |
-            @Html.ActionLink("Regresar a la Lista", "Index")
+            <input type="submit" value="Delete" class="btn btn-default" /> |
+            @Html.ActionLink("Back to List", "Index")
         </div>
     }
 </div>
