--- a/ProjectExpenseControl/Views/AccountingAccounts2/Details.cshtml
+++ b/ProjectExpenseControl/Views/AccountingAccounts2/Details.cshtml
@@ -4,10 +4,10 @@
     ViewBag.Title = "Details";
 }
 
-<h2>Detalles de la Cuenta Contable</h2>
+<h2>Details</h2>
 
 <div>
-    <h4>Cuenta Contable</h4>
+    <h4>AccountingAccount</h4>
     <hr />
     <dl class="dl-horizontal">
         <dt>
@@ -21,6 +21,6 @@
     </dl>
 </div>
 <p>
-    @Html.ActionLink("Editar", "Edit", new { id = Model.ACC_IDE_ACCOUNT }) |
-    @Html.ActionLink("Regresar a la Lista", "Index")
+    @Html.ActionLink("Edit", "Edit", new { id = Model.ACC_IDE_ACCOUNT }) |
+    @Html.ActionLink("Back to List", "Index")
 </p>
